--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -2,8 +2,11 @@
 <html>
 <head>
   <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons' rel="stylesheet">
-  <link href="https://unpkg.com/vuetify/dist/vuetify.min.css" rel="stylesheet">
+  <link href="https://unpkg.com/vuetify@2.0.0/dist/vuetify.min.css" rel="stylesheet">
   <link href="./css/c3.min.css" rel="stylesheet">
+    <script src="https://unpkg.com/vue@2.3.4/dist/vue.min.js" charset="utf-8"></script>
+    <script src="https://unpkg.com/vuetify@2.0.0/dist/vuetify.min.js" charset="utf-8"></script>
+
   <script src="./js/d3.v3.min.js" charset="utf-8"></script>
   <script src="./js/c3.min.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
