--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -4,8 +4,7 @@
   <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons' rel="stylesheet">
   <link href="https://unpkg.com/vuetify@2.0.0/dist/vuetify.min.css" rel="stylesheet">
   <link href="./css/c3.min.css" rel="stylesheet">
-    <script src="https://unpkg.com/vue@2.3.4/dist/vue.min.js" charset="utf-8"></script>
-    <script src="https://unpkg.com/vuetify@2.0.0/dist/vuetify.min.js" charset="utf-8"></script>
+
 
   <script src="./js/d3.v3.min.js" charset="utf-8"></script>
   <script src="./js/c3.min.js"></script>
@@ -1080,8 +1079,10 @@ background: linear-gradient(to right, #0f3443, #34e89e); }
 
     </v-app>
   </div>
-  <script src="https://unpkg.com/vue/dist/vue.js"></script>
-  <script src="https://unpkg.com/vuetify/dist/vuetify.js"></script>
+      <script src="https://unpkg.com/vue@2.3.4/dist/vue.min.js" charset="utf-8"></script>
+    <script src="https://unpkg.com/vuetify@2.0.0/dist/vuetify.min.js" charset="utf-8"></script>
+<!--   <script src="https://unpkg.com/vue/dist/vue.js"></script>
+  <script src="https://unpkg.com/vuetify/dist/vuetify.js"></script> -->
   <script src="./js/app.js"></script>
 </body>
 </html>
